--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ayouubyy.github.io/Portfolio",
+  "homepage": "https://ayouubyy.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
